--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.2",
+    "sinon": "^16.0.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   },
