--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "bhauptvogel",
   "dependencies": {
     "14": "^3.1.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.2",
     "sinon": "^16.0.0",
