--- a/package.json
+++ b/package.json
@@ -2,22 +2,5 @@
   "name": "atego",
   "version": "1.0.0",
   "description": "",
-  "main": "server/index.js",
-  "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
-  },
-  "author": "bhauptvogel",
-  "dependencies": {
-    "14": "^3.1.6",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.5.2",
-    "sinon": "^16.0.0",
-    "socket.io": "^4.7.2",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+  "author": "bhauptvogel"
 }
