--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/socket.io-client": "^3.0.0",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.31",
 		"svelte": "^4.0.5",
@@ -23,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"axios": "^1.6.0"
+		"axios": "^1.6.0",
+		"socket.io-client": "^4.7.2"
 	}
 }
