--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.6.0",
+		"createjs-module": "^0.8.3",
 		"socket.io-client": "^4.7.2"
 	}
 }
