--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "node src/index.ts",
-    "dev": "nodemon src/index.ts",
-    "build": "npx tsc"
+      "dev": "nodemon src/index.ts",
+      "build": "tsc",
+      "start": "node dist/index.js"
   },
   "author": "",
   "dependencies": {
