--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-      "dev": "nodemon src/index.ts",
-      "build": "tsc",
-      "start": "node dist/index.js"
+    "dev": "nodemon src/index.ts",
+    "build": "npx tsc",
+    "start": "node src/index.js"
   },
   "author": "",
   "dependencies": {
@@ -23,7 +23,6 @@
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/uuid": "^9.0.6",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
