--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,6 @@
     "@types/uuid": "^9.0.6",
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
