--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "node src/index.js"
   },
   "author": "",
