--- a/backend/package.json
+++ b/backend/package.json
@@ -10,20 +10,21 @@
   },
   "author": "",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "nanoid": "^3.3.4",
     "nodemon": "^3.0.1",
     "sinon": "^17.0.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.16",
     "@types/node": "^20.9.2",
     "@types/uuid": "^9.0.6",
-    "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
   }
