--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,17 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/socket.io-client": "^3.0.0",
+		"sass": "^1.69.5",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-preprocess": "^5.1.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.4.2",
 		"@types/js-cookie": "^3.0.6",
 		"axios": "^1.6.0",
 		"createjs-module": "^0.8.3",
