--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "nanoid": "^3.3.4",
     "nodemon": "^3.0.1",
@@ -22,7 +24,9 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.16",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.2",
     "@types/uuid": "^9.0.6",
     "ts-node": "^10.9.1",
